tests/cases/compiler-development/artifact/errors/diagnostic-double-move.diagnostic
diagnostic error code=O0001 family=ownership message="cannot use moved binding 'token'" sources=1 labels=1 notes=0 helps=0
  Source source_id=0 kind=file path="tests/cases/compiler-development/artifact/errors/diagnostic-double-move.ari" display="tests/cases/compiler-development/artifact/errors/diagnostic-double-move.ari" bytes=201
  Label index=0 role=primary source_id=0 source="tests/cases/compiler-development/artifact/errors/diagnostic-double-move.ari" line=8 column=16 end_line=8 end_column=21 byte_start=151 byte_end=156 message=""
  Snippet label=0 text="  --> tests/cases/compiler-development/artifact/errors/diagnostic-double-move.ari:8:16\n   |\n 8 |   let second = token;\n   |                ^^^^^"
